tests/baselines/reference/continueNotInIterationStatement1.errors.txt
tests/cases/compiler/continueNotInIterationStatement1.ts(1,1): error TS1105: A 'continue' statement can only be used within an enclosing iteration statement.


==== tests/cases/compiler/continueNotInIterationStatement1.ts (1 errors) ====
    continue;
    ~~~~~~~~~
!!! error TS1105: A 'continue' statement can only be used within an enclosing iteration statement.